# movie-catalog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: app_lifespan.py  main.py
app/api/: __init__.py  main_views.py
app/api/api_v1/: __init__.py
app/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
app/api/api_v1/movies/: crud.py  dependencies.py  views.py
app/api/api_v1/movies/views/: __init__.py  details_views.py  list_views.py  redis.py
app/commands/: __init__.py  cli.py  hello.py  tokens.py
app/core/: config.py
app/schemas/: movie.py
app/testing/: conftest.py
app/testing/test_api/: test_views.py
app/testing/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py
app/testing/test_api/test_api_v1/test_movies/: test_crud.py  test_dependencies.py
app/testing/test_schemas/: test_movie.py
movie-catalog/: main.py
movie-catalog/api/api_v1/movies/: crud.py
