[project]
name = "movie-catalog"
version = "0.1.0"
description = "movie-catalog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.118.0",
    "mypy>=1.11",
    "redis[hiredis]>=6.4.0",
    "typer==0.19.2",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
